--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <html>
 <head>
 <title>Hello Andrews</title>
+<link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-<p>Test paragraph</p>
+<p class="title">Test paragraph</p>
 <p>Test paragraph 2</p>
 <a href="https://google.com">Content Link</a>
 <div>
-  <p>Test paragraph</p>
+  <p class="title">Test paragraph</p>
   <p>Test paragraph</p>
   <p>Test paragraph</p>
   <p>Test paragraph</p>
@@ -50,7 +51,7 @@
   </tr>
 </table>
 
-<div style="color: red;">
+<div class="title" style="color: red;">
   Header
   <div style="color: blue;">
     Body
